cluster/apps/nginx/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-staging
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nginx.staging.devantler.com`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: certificate-staging-tls
